--- a/src/main/resources/templates/header-footer/header.html
+++ b/src/main/resources/templates/header-footer/header.html
@@ -23,7 +23,7 @@
                 </a></div>
 
                 <div class="css-1h0hlgo"><a class="css-1scjy81" href="/plogging/plogging"><span
-                        class="css-18nk785">플로깅 목록</span></a><a class="css-1scjy81" href="/product/product"><span
+                        class="css-18nk785">플로깅 목록</span></a><a class="css-1scjy81" href="/product/product-list"><span
                         class="css-18nk785">쿠폰 목록</span></a><a class="css-1scjy81" href="/review/local_review_list"><span
                         class="css-18nk785">플로깅후기 목록</span></a></div>
                 <div class="css-ff6c76">
@@ -44,9 +44,9 @@
                         </div>
 
                         <div class="css-1f624s9">
-                            <div class="css-1kpxvh4"><a class="css-1g5o6hv"
-                                                        href="/user/login">로그인</a><a
-                                    class="css-1g5o6hv" href="/user/join">회원가입</a><a class="css-1tlac5g"
+                            <div class="css-1kpxvh4"><a class="css-1g5o6hv login-header"
+                                                       >로그인</a><a
+                                    class="css-1g5o6hv join-header">회원가입</a><a class="css-1tlac5g"
                                                                                             href="/notice/notice">공지사항</a>
                             </div>
                             <span class="css-1amee4m"><button type="button" class="css-duxp2y write-btn"><span
