마스터에서 작업하지 말라고git add .

--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -267,5 +267,5 @@
     let products = [[${products}]];
     let ploggings = [[${ploggins}]];
 </script>
-
+<script src="/js/header-footer/header.js"></script>
 </html>
