--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
     <link href="/css/mypage/my-point.css" rel="stylesheet">
+    <link href="/css/mypage/main.css" rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
@@ -19,22 +20,28 @@
             <div class="myhome-nav myhome-nav--owner">
                 <nav class="page-navigation myhome-nav__owner">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="" href="/users/20617180"
+                        <li class="page-navigation__item"><a class="active" href="/users/20617180"
                                                              target="_self">프로필</a></li>
                         <li class="page-navigation__item"><a class="" href="/user_shopping_pages/order_list"
                                                              target="_self">나의 플로깅</a></li>
-                        <li class="page-navigation__item"><a class="active" href="/production_reviews/write" target="_self">나의
+                        <li class="page-navigation__item"><a class="" href="/production_reviews/write" target="_self">나의
                             상품</a></li>
                     </ul>
                 </nav>
                 <nav class="page-navigation myhome-nav__contents">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="" href="/users/20617180" target="_self">내가 구매한 상품</a>
+                        <li class="page-navigation__item"><a class="active" href="/users/20617180" target="_self">홈</a>
                         </li>
                         <li class="page-navigation__item"><a class="" href="/users/20617180/card_collections"
-                                                             target="_self">내가 찜한 상품</a></li>
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180/praises"
-                                                             target="_self">나의 휴지롤</a></li>
+                                                             target="_self">회원정보 수정</a></li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/projects"
+                                                             target="_self">비밀번호 수정</a></li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/advices"
+                                                             target="_self">1대1 문의</a></li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/questions" target="_self">나의 팔로잉</a>
+                        </li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/collections" target="_self">나의 팔로워</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -131,55 +138,94 @@
                     <div class="css-1dm5gv7 e15wafbq0">
                         <div class="css-vb69r7 e1ivswjr2"></div>
                     </div>
-                    <div class="css-ow22sl e1v2ggz01">
-                        <div class="css-1h25ori e1t6i3i25">
-                            <div class="css-0 e1t6i3i24"><h2 class="css-o538wr e1t6i3i23">사용 가능한 휴지롤</h2>
-                                <p class="css-of8h0b e1t6i3i22"></p></div>
-                            <div class="css-1yu4f1z e1t6i3i21"><p class="css-12fah4g e1t6i3i20">현재까지 모은 휴지롤:<b>
-                                P</b></p></div>
-                        </div>
-                        <div class="css-a4hf5k e1rx7pum13">
-                            <div class="css-1066lcq e1rx7pum12"><h2 class="css-o538wr e1rx7pum11">휴지롤 내역</h2>
-                                <button class="css-1eaft1l e1rx7pum10"><span
-                                        class="icon _chevron_right_12 css-w9u1sc"></span></button>
-                            </div>
-                            <div class="css-18ewygj e1rx7pum9">
-                                <!--<div class="css-oc7sge e1rx7pum8">
-                                    <div class="css-1kwo4sf e1rx7pum7">
-                                        <div class="css-3eylin e1rx7pum6">2023.05.15</div>
-                                        <div class="css-15jzb03 e1rx7pum5">
-                                            <div class="css-s5xdrg e1rx7pum4">
-                                                <div class="accumulate css-y3863i e1rx7pum3">적립</div>
-                                                <h2 class="css-1kzfo6n e1rx7pum2">첫사진 업로드</h2></div>
-                                            <ul class="css-82ta8s e1rx7pum1">
-                                                <li>첫 사진을 올리셨네요? 짝짝짝! 1000 휴지롤 적립되었습니다</li>
-                                                <li>유효기간: 2023.08.13까지</li>
-                                            </ul>
+                    <div class="css-1ltj86z e15wafbq0">
+                        <div class="css-1ecfa5v emjsage0">
+                            <div>
+                                <section class="css-j2mjq4 e17n0xi4">
+                                    <div class="css-rd2t8e e17n0xi3"><h1 class="css-dyhp2o e17n0xi2">플로깅 대기 목록<span
+                                            class="css-1vy2ypg e17n0xi0">1</span></h1>
+                                        <div class="css-vxgh1s e17n0xi1"><a class="css-1bj6v1n e7uojt20"
+                                                                            href="/users/20617180/projects">전체보기</a>
                                         </div>
                                     </div>
-                                    <div class="css-lgp5e9 e1rx7pum0">+ 1,000P</div>
-                                </div>-->
+                                    <div class="css-j6aom e1qiovhc1">
+                                        <div class="css-yvus98 e1qiovhc0"><a class="css-4zleql e1ji2o6g5"
+                                                                             href="/projects/140633/detail">
+                                            <div class="css-346zgy e1ji2o6g4"><img class="css-1n0kzcr e1ji2o6g3" alt=""
+                                                                                   src="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=360&amp;h=240&amp;c=c&amp;webp=1"
+                                                                                   srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168409600068915155.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
+                                                    class="css-1hdjay7 e1ji2o6g2">신청 심사중</span></div>
+                                            <span class="css-1j2fjgk e10hes6t1">플로깅</span>
+                                            <div class="css-1ifikfr e1ji2o6g0">제발 제목</div>
+                                        </a></div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic et2dhxl0"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic et2dhxl0"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic et2dhxl0"></div>
+                                        </div>
+                                    </div>
+                                </section>
+                                <section class="css-j2mjq4 e17n0xi4">
+                                    <div class="css-rd2t8e e17n0xi3"><h1 class="css-dyhp2o e17n0xi2">플로깅 참가 대기<span
+                                            class="css-1vy2ypg e17n0xi0">1</span></h1>
+                                        <div class="css-vxgh1s e17n0xi1"><a class="css-1bj6v1n e7uojt20"
+                                                                            href="/users/20617180/advices">전체보기</a>
+                                        </div>
+                                    </div>
+                                    <div class="css-j6aom e1qiovhc1">
+                                        <div class="css-yvus98 e1qiovhc0"><a class="css-4zleql e10hes6t5"
+                                                                             href="/advices/9282">
+                                            <div class="css-346zgy e10hes6t4"><img class="css-1n0kzcr e10hes6t3" alt=""
+                                                                                   src="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=360&amp;h=240&amp;c=c&amp;webp=1"
+                                                                                   srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
+                                                    class="css-1hdjay7 e10hes6t2">참가 심사중</span></div>
+                                            <span class="css-1j2fjgk e10hes6t1">수납</span>
+                                            <div class="css-1ifikfr e10hes6t0">제발 제목2</div>
+                                        </a></div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                    </div>
+                                </section>
+                                <section class="css-j2mjq4 e17n0xi4">
+                                    <div class="css-rd2t8e e17n0xi3"><h1 class="css-dyhp2o e17n0xi2">찜 목록<span
+                                            class="css-1vy2ypg e17n0xi0">1</span></h1>
+                                        <div class="css-vxgh1s e17n0xi1"><a class="css-1bj6v1n e7uojt20"
+                                                                            href="/users/20617180/advices">전체보기</a>
+                                        </div>
+                                    </div>
+                                    <div class="css-j6aom e1qiovhc1">
+                                        <div class="css-yvus98 e1qiovhc0"><a class="css-4zleql e10hes6t5"
+                                                                             href="/advices/9282">
+                                            <div class="css-346zgy e10hes6t4"><img class="css-1n0kzcr e10hes6t3" alt=""
+                                                                                   src="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=360&amp;h=240&amp;c=c&amp;webp=1"
+                                                                                   srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=640&amp;h=427&amp;c=c&amp;webp=1 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=720&amp;h=480&amp;c=c&amp;webp=1 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/projects/cover_images/168414767311208604.png?gif=1&amp;w=1080&amp;h=720&amp;c=c&amp;webp=1 3x"><span
+                                                    class="css-1hdjay7 e10hes6t2">사러 가기</span></div>
+                                            <span class="css-1j2fjgk e10hes6t1">수납</span>
+                                            <div class="css-1ifikfr e10hes6t0">제발 제목3</div>
+                                        </a></div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                        <div class="css-yvus98 e1qiovhc0">
+                                            <div class="css-9r5wic e1tzllv70"></div>
+                                        </div>
+                                    </div>
+                                </section>
                             </div>
-                        </div>
-                        <div class="css-e1gl82 e1v2ggz00">
-                            <ul class="_2BEHX">
-                                <li class="_1B8WI"><a th:if="${myPloggingPagination.prev}" th:href="${myPloggingPagination.startPage - 1}" class="_2XI47 _1gwhd">
-                                    <svg width="1em" height="1em" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                              d="M6 19.692L8.25 22 18 12 8.25 2 6 4.308 13.5 12z"></path>
-                                    </svg>
-                                </a></li>
-                                <th:block th:each="page:${#numbers.sequence(myPloggingPagination.startPage, myPloggingPagination.endPage)}">
-                                <li><a th:if="${page eq myPloggingPagination.page}" class="_3b4ci R16_p" th:text="${page}"></a></li>
-                                <li><a th:unless="${page eq myPloggingPagination.page}" class="_3b4ci R16_p" th:href="${page}" th:text="${page}"></a></li>
-                                </th:block>
-                                <li class="_1B8WI"><a th:if="${myPloggingPagination.next}" th:href="${myPloggingPagination.endPage + 1}">
-                                    <svg width="1em" height="1em" viewBox="0 0 24 24">
-                                        <path fill="currentColor"
-                                              d="M6 19.692L8.25 22 18 12 8.25 2 6 4.308 13.5 12z"></path>
-                                    </svg>
-                                </a></li>
-                            </ul>
                         </div>
                     </div>
                 </div>
@@ -190,10 +236,5 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
-<script src="/js/mypage/my-point.js"></script>
-<script src="/js/mypage/post.js"></script>
-<script th:inline="javascript">
-    let tissues = [[${tissues}]];
 
-</script>
 </html>
