--- a/src/main/resources/templates/mypage/my-host-list.html
+++ b/src/main/resources/templates/mypage/my-host-list.html
@@ -24,32 +24,24 @@
             <div class="myhome-nav myhome-nav--owner">
                 <nav class="page-navigation myhome-nav__owner">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180"
+                        <li class="page-navigation__item"><a class="" href="/users/20617180"
                                                              target="_self">프로필</a></li>
-                        <li class="page-navigation__item"><a class="" href="/user_shopping_pages/order_list"
-                                                             target="_self">나의 쇼핑</a></li>
+                        <li class="page-navigation__item"><a class="active" href="/user_shopping_pages/order_list"
+                                                             target="_self">나의 플로깅</a></li>
                         <li class="page-navigation__item"><a class="" href="/production_reviews/write" target="_self">나의
-                            리뷰</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/edit" target="_self">설정</a>
-                        </li>
+                            상품</a></li>
                     </ul>
                 </nav>
                 <nav class="page-navigation myhome-nav__contents">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="" href="/users/20617180" target="_self">모두보기</a>
+                        <li class="page-navigation__item"><a class="active" href="/users/20617180" target="_self">플로깅 관리</a>
                         </li>
                         <li class="page-navigation__item"><a class="" href="/users/20617180/card_collections"
-                                                             target="_self">사진</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/projects"
-                                                             target="_self">집들이</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/advices"
-                                                             target="_self">노하우</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/questions" target="_self">질문과답변</a>
-                        </li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/collections" target="_self">스크랩북</a>
-                        </li>
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180/praises"
-                                                             target="_self">좋아요</a></li>
+                                                             target="_self">플로깅 모집</a></li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/card_collections"
+                                                             target="_self">후기 관리</a></li>
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/card_collections"
+                                                             target="_self">후기 작성</a></li>
                     </ul>
                 </nav>
             </div>
