--- a/src/main/resources/templates/mypage/users-edit-password.html
+++ b/src/main/resources/templates/mypage/users-edit-password.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleag.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -16,59 +16,72 @@
 </head>
 </head>
 <body>
-<div>
-    <div class="css-18dsw15 e1ivswjr4">
-        <div class="myhome-nav myhome-nav--owner">
-            <nav class="page-navigation myhome-nav__owner">
-                <ul style="transform: translateX(0px);">
-                    <li class="page-navigation__item"><a class="active" href="#" target="_self">프로필 설정</a>
-                    </li>
-                    <li class="page-navigation__item"><a class="" href="#" target="_self">플로깅</a></li>
-                    <li class="page-navigation__item"><a class="" href="#" target="_self">나의 휴지롤</a></li>
-                </ul>
-            </nav>
-            <nav class="page-navigation myhome-nav__contents">
-                <ul style="transform: translateX(0px);">
-                    <li class="page-navigation__item"><a class="" href="#" target="_self">모두보기</a></li>
-                    <li class="page-navigation__item"><a class="" href="#" target="_self">회원정보수정</a></li>
-                    <li class="page-navigation__item"><a class="active" href="#" target="_self">비밀번호 변경</a></li>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-        <div class="update-password__wrap"><h1 class="update-password__title">비밀번호 변경</h1>
-            <form>
-                <div class="update-password__section">
-                    <div class="update-password__section__title">새 비밀번호</div>
-                    <div class="update-password__section__sub-title">영문, 숫자를 포함한 8자 이상의 비밀번호를 입력해주세요.</div>
-                    <div class="expert-form-group__content">
-                        <div class="expert-form-group__input"><input type="password" class="form-control" id="new"
-                                                                     value=""></div>
-                        <div class="expert-form-group__error">
+<div class="css-b3oum6">
+    <div class="layout">
+        <div class="update-password">
+            <div class="myhome-nav myhome-nav--owner">
+                <nav class="page-navigation myhome-nav__owner">
+                    <ul style="transform: translateX(0px);">
+                        <li class="page-navigation__item"><a class="" href="/users/20617180" target="_self">프로필</a></li>
+                        <li class="page-navigation__item"><a class="" href="/user_shopping_pages/order_list"
+                                                             target="_self">나의 쇼핑</a></li>
+                        <li class="page-navigation__item"><a class="" href="/production_reviews/write" target="_self">나의
+                            리뷰</a></li>
+                        <li class="page-navigation__item"><a class="active" href="/users/20617180/edit" target="_self">설정</a>
+                        </li>
+                    </ul>
+                </nav>
+                <nav class="page-navigation myhome-nav__contents">
+                    <ul style="transform: translateX(0px);">
+                        <li class="page-navigation__item"><a class="" href="/users/20617180/edit"
+                                                             target="_self">회원정보수정</a></li>
+                        <li class="page-navigation__item"><a class="" href="/push_setting" target="_self">알림 설정</a></li>
+                        <li class="page-navigation__item"><a class="" href="/block/users/20617180/blocked-users"
+                                                             target="_self">사용자 숨기기 설정</a></li>
+                        <li class="page-navigation__item"><a class=""
+                                                             href="https://pro.ohou.se/?utm_source=ohouse&amp;utm_medium=web&amp;utm_campaign=prosignup&amp;utm_content=myhome"
+                                                             target="_self">전문가 신청</a></li>
+                        <li class="page-navigation__item"><a class="active" href="/users/20617180/edit_password"
+                                                             target="_self">비밀번호 변경</a></li>
+                        <li class="page-navigation__item"><a class="" href="/invite_codes/recommend_code"
+                                                             target="_self">추천코드</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="update-password__wrap"><h1 class="update-password__title">비밀번호 변경</h1>
+                <form th:action="@{/mypage/users-edit-password}" method="post">
+                    <div class="update-password__section">
+                        <div class="update-password__section__title">새 비밀번호</div>
+                        <div class="update-password__section__sub-title">영문, 숫자를 포함한 8자 이상의 비밀번호를 입력해주세요.</div>
+                        <div class="expert-form-group">
+                            <div class="expert-form-group__content">
+                                <div class="expert-form-group__input"><input type="password" value="" name="password"
+                                                                             class="form-control focus-visible"></div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="update-password__section">
-                    <div class="update-password__section__title">새 비밀번호</div>
-                    <div class="expert-form-group">
-                        <div class="expert-form-group__content">
-                            <div class="expert-form-group__input"><input type="password" class="form-control" id="check" value="">
-                            </div>
-                            <div class="expert-form-group__error">
+                    <div class="update-password__section">
+                        <div class="update-password__section__title">새 비밀번호</div>
+                        <div class="expert-form-group">
+                            <div class="expert-form-group__content">
+                                <div class="expert-form-group__input"><input type="password" value="" name="confirmPassword"
+                                                                             class="form-control focus-visible"></div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <button class="button button--color-blue button--size-50 button--shape-4 update-password__submit"
-                        type="submit">비밀번호 변경
-                </button>
-            </form>
+                    <button class="button button--color-blue button--size-50 button--shape-4 update-password__submit"
+                            type="submit">비밀번호 변경
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-<script>
+<script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
+<script src="/js/mypagen/users-edit-password.js"></script>
+<!--<script th:inline="javascript">
     $("#new").on("blur", function() {
         var password = $(this).val();
 
@@ -121,6 +134,6 @@
         }
         return ck;
     });
-</script>
+</script>-->
 </html>
 
