--- a/src/main/resources/templates/review/user_review_list.html
+++ b/src/main/resources/templates/review/user_review_list.html
@@ -103,7 +103,7 @@
     let order = [[${search.order}]];
     let userId = [[${session.id}]];
 </script>
-<script src="/js/review/local-review.js"></script>
+<script src="/js/review/user-review.js"></script>
 <script src="/js/review/order.js"></script>
 <script src="/js/review/thumbnail.js"></script>
 </html>
