--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -10,37 +10,43 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
           rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
+    <link href="/css/header-footer/header.css" rel="stylesheet">
     <link href="/css/mypage/my-point.css" rel="stylesheet">
     <link href="/css/mypage/main.css" rel="stylesheet">
+    <link href="/css/header-footer/header-login.css" rel="stylesheet">
+    <link href="/css/header-footer/footer.css" rel="stylesheet">
 </head>
 <body>
 <div class="css-b3oum6">
     <div class="layout">
+        <header th:replace="~{/header-footer/header-login}"></header>
         <div class="css-18dsw15 e1ivswjr4">
             <div class="myhome-nav myhome-nav--owner">
                 <nav class="page-navigation myhome-nav__owner">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180"
+                        <li class="page-navigation__item"><a class="active" href="/mypage/main"
                                                              target="_self">프로필</a></li>
-                        <li class="page-navigation__item"><a class="" href="/user_shopping_pages/order_list"
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-host-list"
                                                              target="_self">나의 플로깅</a></li>
-                        <li class="page-navigation__item"><a class="" href="/production_reviews/write" target="_self">나의
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-product" target="_self">나의
                             상품</a></li>
                     </ul>
                 </nav>
                 <nav class="page-navigation myhome-nav__contents">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180" target="_self">홈</a>
+                        <li class="page-navigation__item"><a class="active" href="/mypage/main" target="_self">홈</a>
                         </li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/card_collections"
+                        <li class="page-navigation__item"><a class="" href="/mypage/users-edit"
                                                              target="_self">회원정보 수정</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/projects"
+                        <li class="page-navigation__item"><a class="" href="/mypage/users-edit-password"
                                                              target="_self">비밀번호 수정</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/advices"
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-question"
                                                              target="_self">1대1 문의</a></li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/questions" target="_self">나의 팔로잉</a>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-following" target="_self">나의 팔로잉</a>
                         </li>
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/collections" target="_self">나의 팔로워</a>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-follower" target="_self">나의 팔로워</a>
                         </li>
                     </ul>
                 </nav>
@@ -231,10 +237,11 @@
                 </div>
             </div>
         </div>
+        <footer th:replace="~{/header-footer/footer :: .css-f93bbn}"></footer>
     </div>
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
-
+<script src="/js/header-footer/header.js"></script>
 </html>
