--- a/src/main/resources/templates/mypage/users-edit-password.html
+++ b/src/main/resources/templates/mypage/users-edit-password.html
@@ -13,38 +13,41 @@
     <link href="/css/font.css" rel="stylesheet">
     <link href="/css/mypage/users.css" rel="stylesheet">
     <link href="/css/mypage/users-edit-password.css" rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
+    <link href="/css/header-footer/header-login.css" rel="stylesheet">
+    <link href="/css/header-footer/footer.css" rel="stylesheet">
 </head>
 </head>
 <body>
 <div class="css-b3oum6">
     <div class="layout">
+        <header th:replace="~{/header-footer/header-login}"></header>
         <div class="update-password">
             <div class="myhome-nav myhome-nav--owner">
                 <nav class="page-navigation myhome-nav__owner">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="" href="/users/20617180" target="_self">프로필</a></li>
-                        <li class="page-navigation__item"><a class="" href="/user_shopping_pages/order_list"
-                                                             target="_self">나의 쇼핑</a></li>
-                        <li class="page-navigation__item"><a class="" href="/production_reviews/write" target="_self">나의
-                            리뷰</a></li>
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180/edit" target="_self">설정</a>
-                        </li>
+                        <li class="page-navigation__item"><a class="active" href="/mypage/main"
+                                                             target="_self">프로필</a></li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-host-list"
+                                                             target="_self">나의 플로깅</a></li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-product" target="_self">나의
+                            상품</a></li>
                     </ul>
                 </nav>
                 <nav class="page-navigation myhome-nav__contents">
                     <ul style="transform: translateX(0px);">
-                        <li class="page-navigation__item"><a class="" href="/users/20617180/edit"
-                                                             target="_self">회원정보수정</a></li>
-                        <li class="page-navigation__item"><a class="" href="/push_setting" target="_self">알림 설정</a></li>
-                        <li class="page-navigation__item"><a class="" href="/block/users/20617180/blocked-users"
-                                                             target="_self">사용자 숨기기 설정</a></li>
-                        <li class="page-navigation__item"><a class=""
-                                                             href="https://pro.ohou.se/?utm_source=ohouse&amp;utm_medium=web&amp;utm_campaign=prosignup&amp;utm_content=myhome"
-                                                             target="_self">전문가 신청</a></li>
-                        <li class="page-navigation__item"><a class="active" href="/users/20617180/edit_password"
-                                                             target="_self">비밀번호 변경</a></li>
-                        <li class="page-navigation__item"><a class="" href="/invite_codes/recommend_code"
-                                                             target="_self">추천코드</a></li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/main" target="_self">홈</a>
+                        </li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/users-edit"
+                                                             target="_self">회원정보 수정</a></li>
+                        <li class="page-navigation__item"><a class="active" href="/mypage/users-edit-password"
+                                                             target="_self">비밀번호 수정</a></li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-question"
+                                                             target="_self">1대1 문의</a></li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-following" target="_self">나의 팔로잉</a>
+                        </li>
+                        <li class="page-navigation__item"><a class="" href="/mypage/my-follower" target="_self">나의 팔로워</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -75,6 +78,7 @@
                 </form>
             </div>
         </div>
+        <footer th:replace="~{/header-footer/footer :: .css-f93bbn}"></footer>
     </div>
 </div>
 </body>
@@ -135,5 +139,6 @@
         return ck;
     });
 </script>-->
+<script src="/js/header-footer/header.js"></script>
 </html>
 
