--- a/src/main/resources/templates/review/review-form.html
+++ b/src/main/resources/templates/review/review-form.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="/css/notice/notice.css" rel="stylesheet">
     <link href="/css/plogging/plogging-form.css" rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
     <link href="/css/font.css" rel="stylesheet">
-    <link href="/css/header-footer/header.css" rel="stylesheet">
+    <link href="/css/header-footer/header-login.css" rel="stylesheet">
+    <link href="/css/header-footer/footer.css" rel="stylesheet">
+
 
 </head>
 <body>
-<th:block th:replace="/header-footer/header::header"></th:block>
+<header th:replace="~{/header-footer/header-login}"></header>
 <div class="page">
     <div class="css-b3oum6">
         <div class="css-12bdpl9 e182177l4">
@@ -33,8 +35,7 @@
                     </div>
                 </div>
                 <div class="css-q3w6qr e10ttx5d5">
-                    <div class="css-1fyeg2n e10ttx5d4"><a aria-label="오늘의집" class="css-1uq8wjk e10ttx5d2" href="/">
-                        <img src="../../static/image/logo.png" class="css-1dfyjem"> </a>
+                    <div class="css-1fyeg2n e10ttx5d4">
                         <div class="css-svxhqj e10ttx5d1">
                             <div class="css-s5xdrg e1pjpjse1">
                                 <button class="css-c5xvys exfb88v1" aria-pressed="false" title="사진 추가" type="button">
@@ -386,9 +387,10 @@
 
 </form>
 
-
+<footer th:replace="~{/header-footer/footer :: .css-f93bbn}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="../../static/js/review/review-form.js"></script>
+<script src="/js/header-footer/header.js"></script>
 
 </html>
