--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-<th:block th:replace="/header-footer/header::header"></th:block>
+<th:block th:if="${session.userId==null}">
+    <header class="header" th:replace="~{/header-footer/header :: header}"></header>
+</th:block>
+<th:block th:if="${session.userId!=null}">
+    <header class="header" th:replace="~{/header-footer/header-login :: header}"></header>
+</th:block>
 <div class="e1ixivdu2 css-139mcwb">
     <div class="css-1micng0 e1ixivdu1">
         <section class="css-12oi7vi e10oizx47">
