--- a/src/main/resources/templates/review/review-form.html
+++ b/src/main/resources/templates/review/review-form.html
@@ -12,7 +12,6 @@
 
 </head>
 <body>
-<header th:replace="~{/header-footer/header-login}"></header>
 <div class="page">
     <div class="css-b3oum6">
         <div class="css-12bdpl9 e182177l4">
@@ -36,6 +35,8 @@
                 </div>
                 <div class="css-q3w6qr e10ttx5d5">
                     <div class="css-1fyeg2n e10ttx5d4">
+                        <a aria-label="오늘의집" class="css-1uq8wjk e10ttx5d2" href="/">
+                            <img src="/image/logo.png" class="css-1dfyjem"> </a>
                         <div class="css-svxhqj e10ttx5d1">
                             <div class="css-s5xdrg e1pjpjse1">
                                 <button class="css-c5xvys exfb88v1" aria-pressed="false" title="사진 추가" type="button">
@@ -387,7 +388,6 @@
 
 </form>
 
-<footer th:replace="~{/header-footer/footer :: .css-f93bbn}"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="../../static/js/review/review-form.js"></script>
